--- a/index.html
+++ b/index.html
@@ -63,12 +63,15 @@
 </ul>
 <h3>Download</h3>
 <ul>
+<li>For Debian Testing and Sid (requires systemd, and python-daemon >= 2.0)
+<ul>
 <script type='text/template' id="debtmpl">
 {{#latest_pkgs}}
 <li><a href="deb/{{.}}">{{.}}</a></li>
 {{/latest_pkgs}}
 </script>
 <div id="deblist"></div>
+</ul>
 <li><a href="archive.html">Package Archive</a></li>
 </ul>
 <h3>Support/Feedback</h3>
